--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">ControllerSystemApp</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="mobile_number">mobile number</string>
+    <string name="login_phone">تسجيل دخول عن طريق رقم الهاتف</string>
+    <string name="password">Enter Password</string>
+    <string name="login_text">تسجيل دخول</string>
+    <string name="forget_password">نسيت كلمة المرور؟</string>
+    <string name="password_text">كلمة المرور</string>
 </resources>
