--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,7 @@
     <string name="belong">ذمة /</string>
     <string name="no_stores">"  لا توجد مخان متاحه "</string>
     <string name="plz_add_store">من فضلك اضف مخزن</string>
+    <string name="add_store">اضف مخزن</string>
+    <string name="delegates">مندوبين</string>
+    <string name="accounatnt">محاسبين</string>
 </resources>
