finish AddStore Design

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,4 +54,5 @@
     <string name="product_category">تصنيف المنتج</string>
     <string name="gwalat">الجوالات</string>
     <string name="responsible_person">تحديد مسئول الذمة</string>
+    <string name="search">بحث</string>
 </resources>
