--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,29 @@
     <string name="login_text">تسجيل دخول</string>
     <string name="forget_password">نسيت كلمة المرور؟</string>
     <string name="password_text">كلمة المرور</string>
+    <string name="forget_pass_header">هل نسيت كلمه المرور؟</string>
+    <string name="dont_worry">لا تقلق يمكنك اعاده ضبط كلمه المرور بسهوله هنا.</string>
+    <string name="reset_phone">ادخل رقم الهاتف</string>
+    <string name="send">ارسال</string>
+    <string name="add_product">اضافة منتج</string>
+    <string name="product_image">صورة منتج</string>
+    <string name="gallery_presenter">معرض الصور</string>
+    <string name="photo_camera">الكاميرا</string>
+    <string name="productName">اسم المنتج</string>
+    <string name="describe_product">وصف منتج</string>
+    <string name="numberof_delivery">العدد / الكمية التوصيل</string>
+    <string name="product_level">تصنيف منتج</string>
+    <string name="save_store">تصنيف المخزن</string>
+    <string name="price">السعر</string>
+    <string name="barcode">"لانهاء باركود قم بتصوير "</string>
+    <string name="current_currency">كشف حساب</string>
+    <string name="confirm">تاكيد</string>
+    <string name="search">بحث</string>
+    <string name="sales">المبيعات</string>
+    <string name="delivered">مستلمة</string>
+    <string name="filter">فلتر</string>
+    <string name="more">المزيد</string>
+    <string name="product_summary">تصفية المبيعات</string>
+    <string name="monthly">شهرى</string>
+    <string name="annualy">سنوى</string>
 </resources>
