--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,5 @@
     <string name="product_summary">تصفية المبيعات</string>
     <string name="monthly">شهرى</string>
     <string name="annualy">سنوى</string>
+    <string name="reports">التقارير</string>
 </resources>
