accountant ProductsList & product details Api

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -171,6 +171,9 @@
     <string name="send_sales">ارسال مبيعات</string>
     <string name="classification">"تصنيف "</string>
     <string name="quantity">الكمية</string>
+    <string name="description">"الوصف: "</string>
+    <string name="delegateSelect">تحديد مندوب</string>
+    <string name="saveBarcode">تنزيل الباركود</string>
 
 
 </resources>
