--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -174,6 +174,14 @@
     <string name="description">"الوصف: "</string>
     <string name="delegateSelect">تحديد مندوب</string>
     <string name="saveBarcode">تنزيل الباركود</string>
+    <string name="title_required">العنوان مطلوب</string>
+    <string name="description_required">الوصف مطلوب</string>
+    <string name="delete">مسح</string>
+    <string name="update">تعديل</string>
+    <string name="not_received">الغير مستلمة</string>
+    <string name="received">مستلمة</string>
+    <string name="no_sales">لا توجد مبيعات متاحه</string>
+    <string name="send_admin">ارسال الي الادمن</string>
 
 
 </resources>
