edit store & product classification & logout in accountant & home delegate and wallet

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -219,6 +219,9 @@
     <string name="accounatntDetails">تفاصيل المحاسب</string>
     <string name="clientsDteails">تفاصيل العميل</string>
     <string name="adminDetails">تفاصيل الادمن</string>
+    <string name="sepcialWallet">المحفظة الخاصة</string>
+    <string name="current">الحالية</string>
+    <string name="addNew">اضافات جديدة</string>
 
 
 </resources>
