--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -172,7 +172,7 @@
     <string name="new_password_required">تأكيد كلمة المرور مطلوبة</string>
     <string name="confirm_pass_invalid">تأ:يد كلمة المرور غير متطابقة</string>
     <string name="notifications_reports">اشعارات و بلاغات</string>
-    <string name="make_special_order">انشاء طلب خاصة</string>
+    <string name="make_special_order">انشاء طلبية خاصة</string>
     <string name="send_sales">ارسال مبيعات</string>
     <string name="classification">"تصنيف "</string>
     <string name="quantity">الكمية</string>
