--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -212,6 +212,7 @@
     <string name="writeMessage">اكتب الرساله</string>
     <string name="choose_delegate">تحديد مندوب</string>
     <string name="insert_all_data">تأكد من إدخال جميع البيانات</string>
+    <string name="delegate_choose">تحديد مندوب</string>
 
 
 </resources>
