--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -231,6 +231,7 @@
     <string name="under_procedure">تحت الإجراء</string>
     <string name="insert_all_data">تأكد من إدخال جميع البيانات</string>
     <string name="delegate_choose">تحديد مندوب</string>
+    <string name="max_quantity">الكمية تتعدى الكمية الحالية</string>
 
 
 </resources>
