--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -232,6 +232,7 @@
     <string name="insert_all_data">تأكد من إدخال جميع البيانات</string>
     <string name="delegate_choose">تحديد مندوب</string>
     <string name="max_quantity">الكمية تتعدى الكمية الحالية</string>
+    <string name="selectCategoryFirst">اختر تصنيف المنتج اولا</string>
 
 
 </resources>
