debts list , update remove

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -245,6 +245,7 @@
     <string name="editDebts">تعديل الذمة</string>
     <string name="editDebtsQuantity">سيتم التعديل علي العدد/الكمية في الذمة</string>
     <string name="no_orders">لا توجد طلبات متاحه</string>
+    <string name="quantityRequired">ادخل الكمية من فضلك</string>
 
 
 </resources>
